--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<embed src="https://Siddhnak.github.io/Core Java SE 9 for the Impatient, 2nd Edition.pdf" width="100%" height="850px"/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PDF Viewer</title>
+</head>
+<body>
+    <embed src="https://Siddhnak.github.io/test.pdf" width="100%" height="850px"/>
+</body>
+</html>
