--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>PDF Viewer</title>
 </head>
 <body>
-    <embed src="https://Siddhnak.github.io/test.pdf" width="100%" height="850px"/>
+<!--     <embed src="https://Siddhnak.github.io/test.pdf" width="100%" height="850px"/> -->
+<embed id="pdf-viewer" src="" width="100%" height="100%" />
+    <script>
+        // Get PDF file name from URL parameter
+        const queryString = window.location.search;
+        const urlParams = new URLSearchParams(queryString);
+        const pdfFile = urlParams.get('pdf');
+
+        // Load the PDF file
+        if (pdfFile) {
+            document.getElementById('pdf-viewer').src = `https://siddhnak.github.io/${pdfFile}`;
+        } else {
+            alert('No PDF file specified.');
+        }
+    </script>
+    
 </body>
 </html>
