--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <!--     <embed src="https://Siddhnak.github.io/test.pdf" width="100%" height="850px"/> -->
-<embed id="pdf-viewer" src="" width="100%" height="100%" />
+<embed id="pdf-viewer" src="" width="100%" height="850px" />
     <script>
         // Get PDF file name from URL parameter
         const queryString = window.location.search;
