--- a/index.html
+++ b/index.html
@@ -4,23 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF Viewer</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            font-family: Arial, sans-serif;
+        }
+        #pdf-viewer {
+            width: 100%;
+            height: calc(100vh - 50px); /* Adjust height for input box */
+            border: none;
+        }
+        #input-box {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            padding: 10px;
+            background: #f0f0f0;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            z-index: 10;
+        }
+        #pdf-input {
+            width: calc(100% - 110px);
+            padding: 10px;
+            font-size: 16px;
+        }
+        #load-button {
+            width: 100px;
+            padding: 10px;
+            font-size: 16px;
+        }
+    </style>
 </head>
 <body>
-<!--     <embed src="https://Siddhnak.github.io/test.pdf" width="100%" height="850px"/> -->
-<embed id="pdf-viewer" src="" width="100%" height="850px" />
+    <div id="input-box">
+        <input type="text" id="pdf-input" placeholder="Enter PDF file name (e.g., file2.pdf)" />
+        <button id="load-button" onclick="loadPDF()">Load PDF</button>
+    </div>
+    <embed id="pdf-viewer" src="" type="application/pdf" />
     <script>
-        // Get PDF file name from URL parameter
+        function loadPDF() {
+            const pdfFile = document.getElementById('pdf-input').value;
+            if (pdfFile) {
+                document.getElementById('pdf-viewer').src = `https://siddhnak.github.io/${pdfFile}`;
+            } else {
+                alert('Please enter a PDF file name.');
+            }
+        }
+
+        // Load PDF if specified in the URL parameters (optional)
         const queryString = window.location.search;
         const urlParams = new URLSearchParams(queryString);
         const pdfFile = urlParams.get('pdf');
 
-        // Load the PDF file
         if (pdfFile) {
-            document.getElementById('pdf-viewer').src = `https://siddhnak.github.io/${pdfFile}`;
-        } else {
-            alert('No PDF file specified.');
+            document.getElementById('pdf-input').value = pdfFile;
+            loadPDF();
         }
     </script>
-    
 </body>
 </html>
