--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             border: none;
         }
 /*         Old input box */
-/*         #input-box {
+        #input-box {
             position: fixed;
             top: 20px;
             left: 10px;
@@ -33,8 +33,8 @@
             border-radius: 10px;
             display: flex; /* Align items horizontally */
             gap: 10px;
-        } */
-        #input-box {
+        }
+/*         #input-box {
     position: fixed;
     top: 20px;
     left: 10px;
@@ -47,7 +47,7 @@
     gap: 10px;
     opacity: 1; /* Ensure the input box is initially visible */
     transition: opacity 0.3s ease; /* Add a transition for smooth hiding */
-}
+} */
 
 #input-box.hidden {
     opacity: 0; /* Make the input box invisible */
@@ -84,9 +84,9 @@
         <input type="text" id="pdf-input" placeholder="PDF file name (e.g., fileName.pdf)" />
         <button id="load-button" onclick="loadPDF()">Open PDF</button>
     </div>
-    <div id="input-box" class="hidden">
+<!--     <div id="input-box" class="hidden">
     <!-- Input fields and load button -->
-</div>
+</div> -->
     <!-- Embedded PDF viewer -->
     <embed id="pdf-viewer" src="" type="application/pdf" />
     
