--- a/indexx.html
+++ b/indexx.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<embed src="https://Siddhnak.github.io/Core Java SE 9 for the Impatient, 2nd Edition.pdf" width="100%" height="850px"/>
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,3 +11,4 @@
     <embed src="https://Siddhnak.github.io/test.pdf" width="100%" height="850px"/>
 </body>
 </html>
+ -->
