--- a/index.html
+++ b/index.html
@@ -12,6 +12,54 @@
             border: 1px solid #ccc;
             border-radius: 5px;
         }
+        .copy-button {
+            margin-left: 10px;
+            padding: 5px 10px;
+            font-size: 14px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .copy-button:hover {
+            background-color: #0056b3;
+        }
+        #paste-container {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #f0f0f0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        #pdf-input {
+            width: 300px;
+            padding: 8px;
+            font-size: 14px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            outline: none;
+        }
+        #load-button {
+            padding: 8px 15px;
+            font-size: 14px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        #load-button:hover {
+            background-color: #0056b3;
+        }
+        #pdf-viewer {
+            width: 100%;
+            height: 90vh;
+            border: none;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -29,6 +77,13 @@
     <div id="file-list-container">
         <!-- File names will be displayed here -->
     </div>
+
+    <div id="paste-container">
+        <input type="text" id="pdf-input" placeholder="Paste filename here" />
+        <button id="load-button" onclick="loadPDF()">Open PDF</button>
+    </div>
+
+    <embed id="pdf-viewer" src="" type="application/pdf" />
 
     <script>
         // File names for each folder
@@ -130,6 +185,7 @@
 
                     // Copy button
                     const copyButton = document.createElement('button');
+                    copyButton.classList.add('copy-button');
                     copyButton.textContent = 'Copy';
                     copyButton.onclick = function() {
                         copyToClipboard(fileName);
@@ -152,6 +208,16 @@
             document.execCommand('copy');
             document.body.removeChild(textarea);
             alert(`Copied: ${text}`);
+        }
+
+        function loadPDF() {
+            const pdfFile = document.getElementById('pdf-input').value.trim();
+            if (pdfFile) {
+                const url = `https://siddhnak.github.io/${pdfFile}`;
+                document.getElementById('pdf-viewer').src = url;
+            } else {
+                alert('Please enter a PDF file name.');
+            }
         }
     </script>
 </body>
