--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <body>
     <div class="header-container">
         <div class="rotating-text">
-            <p>✒BE like Baba..BE</p>
+            <p>\=\=->BE like Baba..BE</p>
             <p>
                 <span class="word alizarin">Perseverant.</span>
                 <span class="word wisteria">Determined.</span>
