--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
             max-height: 450px;
             margin-left: 10px;
         }
+        #pdf-container {
+            width: 100%;
+            height: calc(100vh - 20px); /* Adjust based on your needs */
+            display: none;
+        }
+
+        #pdf-viewer {
+            width: 100%;
+            height: 100%;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -124,7 +135,8 @@
     </div>
 
     <div id="pdf-container" style="display: none;">
-        <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="900px" style="margin-top: 20px;">
+        <!--<embed id="pdf-viewer" src="" type="application/pdf">-->
+        <iframe id="pdf-viewer" src="" type="application/pdf"></iframe>
     </div>
 
     <script>
