--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <script>
         const fileNames = {
-            'BendJava': ['12th E-The Complete Reference @Aconcise Java -.pdf',
+            'BendJava': ['240_CORE_JAVA_INTERVIEW_QUESTIONS_AND_ANSWERS_1664692373.pdf','12th E-The Complete Reference @Aconcise Java -.pdf',
                 '(How to Program) Paul Deitel, Harvey Deitel-Java How to Program, Early Objects-Pearson Education (2015) copy.pdf',
                 '[JAVA][Java Programming Interviews Exposed].pdf',
                 '2. Core_Java_for_the_Impatient_proglib.pdf',
@@ -174,7 +174,7 @@
                 'Top_1000_Java_Interview_Questions_Includes_Spring,_Hibernate,_Microservices (2).pdf'
             ],
             'Dbms': [
-                '1 in all sql.pdf',
+                '1 in all sql.pdf','DBMS NOTES_Shivangi',
                 '800+ SQL Server Interview Questions .pdf',
                 'Database Management System E_Book_Final (1).pdf',
                 'DBMS-File 1-pages-1.pdf',
